# Al-Maghriz

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
certificates/: test_20260901.pem
examples/: al_maghriz_demo.ipynb  al_maghriz_demo.py  al_maghriz_eurusd_pnl.ipynb  al_maghriz_pdd_daily.ipynb  al_maghriz_usdt_eth_pnl.ipynb  eth_hourly.csv  eurusd_hourly.csv  example_config.json  example_config.yaml  pdd_daily.csv
include/: al_maghriz_api.h
python/: al_maghriz.py  pyproject.toml
scripts/: build_release.sh  inspect_exports.sh  package_release.sh
src_public/: access_runtime.cpp  access_runtime.hpp  api_bridge.cpp  parameter_mapper.cpp  parameter_mapper.hpp  validation.cpp  validation.hpp
tests/: test_access.py  test_cpp_python_equivalence.py  test_input_validation.py
